<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Share Costs</string>
    <string name="label_add_flatmate">Dodaj mieszkańca</string>
    <string name="label_details">Szczegóły</string>
    <string name="label_add_expense">Dodaj wydatek</string>
    <string name="label_delete_expense">Usuń wydatek</string>
    <string name="action_settings">Settings</string>
    <string name="text_database_name">Nazwa bazy danych:</string>
    <string name="text_database_address">Adres bazy danych:</string>
    <string name="text_db_user">Użytkownik:</string>
    <string name="text_db_password">Hasło:</string>
    <string name="apply">Zastosuj</string>
    <string name="text_database_port">Port:</string>
    <string name="text_flat_name">Nazwa mieszkania</string>
    <string name="text_flatmate">Lokator</string>
    <string name="text_password">Hasło</string>
    <string name="text_init_password">Hasło początkowe</string>
    <string name="text_flatmates">Lokatorzy</string>
    <string name="text_phone">Numer telefonu</string>
    <string name="text_name">Imię</string>
    <string name="text_enter_name">Podaj imię lokatora</string>
    <string name="text_add_flatmate">Dodaj lokatora</string>
    <string name="text_your_balance">Twój bilans:</string>
    <string name="text_debt">Dług</string>
    <string name="text_debts">Długi</string>
    <string name="text_your_debts">Twoje długi</string>
    <string name="text_add_expense">Dodaj wydatek</string>
    <string name="text_expense">Wydatek</string>
    <string name="text_expenses">Wydatki</string>
    <string name="text_your_expenses">Twoje wydatki</string>
    <string name="text_details">Szczegóły:</string>
    <string name="text_amount">Kwota</string>
    <string name="text_category">Kategoria</string>
    <string name="text_description">Opis</string>
    <string name="text_phone_number">Numer telefonu</string>
    <string name="text_login">Zaloguj</string>
    <string name="text_old_password">Stare hasło</string>
    <string name="text_new_password">Nowe hasło</string>
    <string name="text_repeat_password">Powtórz hasło</string>
    <string name="text_logout">Wyloguj</string>
    <string name="text_are_you_sure">Jesteś pewien że chcesz usunąć?</string>
    <string name="text_select_flatmates">Wybierz współlokatorów: </string>
    <string name="button_add">Dodaj</string>
    <string name="button_shopping">Zakupy</string>
    <string name="button_rent">Czynsz</string>
    <string name="button_credit">Pożyczka</string>
    <string name="button_bills">Rachunki</string>
    <string name="button_party">Impreza</string>
    <string name="button_change_image">Zmień obraz</string>
    <string name="button_debt">Pożyczka</string>
    <string name="button_remind">Przypomnij o należnościach</string>
    <string name="button_others">Inne</string>
    <string name="button_close">Zamknij</string>
    <string name="button_login">Zaloguj</string>
    <string name="button_register">Zarejestruj</string>
    <string name="toast_empty_fields">Pola nie mogą być puste</string>
    <string name="toast_registration_successful">Rejestracja przebiegła pomyślnie</string>
    <string name="toast_registration_failed">Rejestracja nie powiodła się</string>
    <string name="toast_registration_exist">Istnieje już mieszkanie o takiej nazwie</string>
    <string name="toast_connection_failed">Połączenie nie powiodło się</string>
    <string name="toast_expense_added">Dodano nowy wydatek</string>
    <string name="toast_incorrect_amount">Niepoprawna wartość</string>
    <string name="toast_any_flatmate">Nie wybrałeś żadnego lokatora</string>
    <string name="toast_expense_removed">Wydatek został usunięty</string>

</resources>
