<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin" >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <RadioButton
            android:id="@+id/radio_debts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_your_debts" />

        <RadioButton
            android:id="@+id/radio_expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_your_expenses" />
    </RadioGroup>

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="@dimen/margin_normall" >
    </ListView>

    <Button
        android:id="@+id/button_close"
            style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/margin_normall"
        android:layout_below="@+id/list"
        android:text="@string/button_close" />

</RelativeLayout>